--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,8 @@
 theme: jekyll-theme-cayman
 title: Meka's homepage
+email: meka1@purdue.edu
 description: Bookmark this to keep an eye on my project updates!
+baseurl: "meka-pro-life"
+url: ""
+twitterusernam: ""
+githubusername: "MekaSaiKrishna"
